<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  
    android:focusable="true" 
	android:focusableInTouchMode="true">
	
    <LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="center_vertical">
		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="8pt"
	    	android:text="@string/MKIndex"/>  
      	<Spinner android:id="@+id/SPNER_MKIndex" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>   
		<TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="8pt"
	    	android:text="@string/WKIndex"/>		
      	<Spinner android:id="@+id/SPNER_WKIndex" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
    
	<LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_vertical">
    	<Button
	    	android:id="@+id/BT_LoadMK"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/LoadMK" />
    	<TextView
	    	android:id="@+id/TV_MKLen"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="#FF3300"
	    	android:gravity="center"
	    	android:textSize="8pt"
	    	android:hint="@string/MKLen"/>  
	</LinearLayout>
	<LinearLayout
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
	    	android:gravity="center_vertical">
	    	<EditText
	    	    android:id="@+id/ED_MKCont"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:hint="@string/MastetKeyPlaintext"
		    	android:text="@string/MKINIT"
		    	android:textSize="8pt"
		    	android:digits="0123456789ABCDEF"
		    	android:background="#33FF00"/>
	</LinearLayout>
	<LinearLayout
       android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
	   	android:orientation="horizontal"
	   	android:gravity="center_vertical">	     
		<CheckBox
		    android:id="@+id/CB_MKCV"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="8pt"
	    	android:text="@string/KCV"/>
		<TextView
	    	android:id="@+id/TV_MKCV"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="#33FF00"
	    	android:textSize="6pt"
	    	android:hint="@string/KCVINIT"/>
   </LinearLayout>  
	<LinearLayout
       android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
	   	android:orientation="horizontal"
	   	android:gravity="center_vertical">
   		<Button
	    	android:id="@+id/BT_LoadWK"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/LoadWK" />
   		<TextView
	    	android:id="@+id/TV_WKLen"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="#FF3300"
	    	android:gravity="center"
	    	android:textSize="8pt"
	    	android:hint="@string/WKLen"/>  
		    	
		<RadioGroup 
	        android:id="@+id/RDG_EncAlg" 
	        android:contentDescription="" 
	        android:orientation="horizontal"
	        android:layout_width="fill_parent" 
	        android:layout_height="fill_parent"
	        android:gravity="center_vertical">	        
   	  		<RadioButton 
    	  	    android:layout_width="wrap_content" 
    	  	    android:layout_height="wrap_content" 
    	  	    android:id="@+id/RD_DES" 
    	  	    android:textSize="8pt"
    	  	    android:text="@string/DES"/>
			<RadioButton 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:id="@+id/RD_3DES" 	 
	    	  	    android:checked="true"
	    	  	    android:textSize="8pt"
					android:text="@string/TDES"/> 
		</RadioGroup>
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_vertical">
    	<EditText
    	    android:id="@+id/ED_WKCont"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/WorkKeyCiphertext"
	    	android:text="@string/WKINIT"
	    	android:textSize="8pt"
	    	android:digits="0123456789ABCDEF"
	    	android:background="#33FF00"/>
	</LinearLayout>
	<LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:gravity="center_vertical">	     
		<CheckBox
		    android:id="@+id/CB_WKCV"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textSize="8pt"
	    	android:text="@string/KCV"/>
		<TextView
	    	android:id="@+id/TV_WKCV"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:background="#33FF00"
	    	android:textSize="6pt"
	    	android:hint="@string/KCVINIT"/>
	</LinearLayout>     	     
   	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
	    android:minHeight="10dp"
	    android:orientation="horizontal"
	    android:gravity="bottom">
   		<TextView
		    android:id="@+id/TV_Report3"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="12pt"
		    android:background="#0000FF"
		    android:textColor="#FF0000"
		    android:text="" />
	</LinearLayout>
</LinearLayout>
