<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:background="#000000">
	<LinearLayout
	    android:id="@+id/ly_title"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	   	android:gravity="center"> 
    	<TextView
	        android:id="@+id/tv_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:textSize="20sp"
			android:gravity="center"
			android:textColor="#FFFF33"
	        android:text="@string/plsChoose" />
	</LinearLayout>
	<LinearLayout
	    android:id="@+id/ly_choosemode"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:layout_centerInParent="true"> 
		<Button 
	      	android:id="@+id/bt_Mode1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#969696"	 
			android:text="@string/Mode1"/>
 		<Button 
	      	android:id="@+id/bt_Mode2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#969696"		 
			android:text="@string/Mode2"/>
    	 <TextView
    	    android:id="@+id/tv_fwVer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:textSize="12sp"
			android:gravity="center"
			android:textColor="#FFFF33"/>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center"
	    android:layout_alignParentBottom="true"> 
       	<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:textSize="12sp"
			android:gravity="center"
			android:textColor="#FFFF33"
	        android:text="@string/appVer" />
	 </LinearLayout>
</RelativeLayout>
